<resources>
    <string name="google_app_id">620761870214</string>
    <string name="app_name">AplicacaoCliente</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cadastrar">Cadastrar</string>

    <!-- Tela Login-->
    <string name="title_login">Login</string>
    <string name="btn_register">Cadastrar</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Senha</string>
    <string name="lbl_forgot_password">Esqueceu a senha?</string>
    <string name="lbl_register">Não está cadastrado?</string>
    <string name="btn_login">Entrar</string>
    <string name="title_activity_dialog_fragment">DialogFragmentActivity</string>
    <string name="email_required">Email Obrigatório</string>
    <string name="password_required">Senha Obrigatório</string>
    <string name="email_required_size_invalid">Seu email deve ter entre 4 e 15 caracteres!</string>
    <string name="password_required_size_invalid">Sua senha deve ter entre 6 e 15 caracteres!</string>
    <string name="cadastro_efetuado_sucesso">Cadastro efetuado com sucesso!</string>
    <string name="login_efetuado_sucesso">Login efetuado com sucesso!</string>


    <!-- Tela Cadastrar Empresa-->
    <string name="cadastro_empresa">Cadastro de Empresa</string>
    <string name="cadastrar_empresa">Cadastrar Empresa</string>
    <string name="nome_empresa">Nome:</string>
    <string name="cnpj">CNPJ:</string>
    <string name="endereco">Endereço da Empresa</string>
    <string name="rua">Rua:</string>
    <string name="numero_casa">Número:</string>
    <string name="complemento">Complemento:</string>
    <string name="bairro">Bairro:</string>
    <string name="cep">CEP:</string>
    <string name="cidade">Cidade:</string>
    <string name="estado">Estado:</string>
    <string name="pais">País:</string>
    <string name="descricao_empresa">Descrição:</string>
    <string name="telefones_contato">Telefones de Contato da Empresa</string>
    <string name="telefone_tipo">Tipo:</string>
    <string name="telefone_numero">Número:</string>
    <string name="add_imagem_perfil">Imagem de Perfil</string>
    <string name="add_imagem">Adicione uma Imagem ao Perfil da Empresa</string>
    <string name="add_imagem_galeria">Escolha da galeria</string>
    <string name="add_imagem_camera">Use a Camera</string>
    <string name="add_imagem_cancel">Cancelar</string>
    <string name="select_file">Selecione um Arquivo</string>
    <string name="nome_obrigatorio">Nome da Empresa é Obrigatório</string>
    <string name="dscr_obrigatorio">Descrição é Obrigatória</string>
    <string name="rua_obrigatorio">Rua é Obrigatório</string>
    <string name="numero_local_obrigatorio">Numero é Obrigatório</string>
    <string name="bairro_obrigatorio">Bairro é Obrigatório</string>
    <string name="cidade_obrigatorio">Cidade é Obrigatório</string>
    <string name="estado_obrigatorio">Estado é Obrigatório</string>
    <string name="pais_obrigatorio">País é Obrigatório</string>

    <!-- Tela Login -->
    <string name="connection_swipe">Sem conexão com Internet. Por favor, verifique seu WIFI ou 3G.</string>
    <string name="connect">Conectar</string>
    <string name="error">Ocorreu um erro no servidor</string>
    <string name="btnretry">Atualizar</string>

    <!-- Valores de Dados Compartilhados -->
    <string name="SharedPreferences">SharedPreferences</string>
    <string name="login">login</string>
    <string name="senha">senha</string>
    <string name="title_activity_logindemo">Sign in</string>
    <string name="save">Salvar</string>
    <string name="favoritar">Favoritar</string>
    <string name="id_pessoa">idpessoa</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_cadastrar_autenticacao">CadastrarAutenticacao</string>
    <string name="btn_save">Salvar</string>
    <string name="lbl_cancel">Cancelar</string>
    <string name="title_activity_google_connect">GoogleConnectActivity</string>
    <string name="serverClientId">253732980124-vjp5k1mbfjp26f48fn91u8du70aqp2ba.apps.googleusercontent.com</string>

    <!--Menus-->
    <string name="action_logout">Deslogar</string>
    <string name="name">nome</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="photo">foto</string>
    <string name="id">id</string>
    <string name="lista_desejos">Adicionar a Lista de Desejos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="sign_in">Sign in</string>
    <string name="inbox">Inbox</string>
    <string name="starred">Starred</string>
    <string name="sent_mail">Sent Mail</string>
    <string name="drafts">Drafts</string>
    <string name="categories">Categories</string>
    <string name="trash">Trash</string>
    <string name="spam">Spam</string>
    <string name="settings">Settings</string>

    <string name="add">Add</string>
    <string name="search">Search</string>

    <string name="important">Important</string>
    <string name="documents">Documents</string>

    <!-- Toast -->
    <string name="open_user_profile">Open user profile</string>
    <string name="open_settings">Open settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ERROS-->
    <string name="erro401">Erro de Autenticação</string>
    <string name="erro401Cadastro">Esse email já está cadastrado!</string>


    <!-- Culinaria -->
    <string-array name="tipo_cozinhas">
        <item>Árabe</item>
        <item>Norte Americana</item>
        <item>Brasileira</item>
        <item>Européia</item>
        <item>Italiana</item>
        <item>Japonesa</item>
        <item>Africana</item>
        <item>Mexicana</item>
        <item>Judáica</item>
        <item>Tailandesa</item>
        <item>Chinesa</item>
    </string-array>

    <!-- Categoria -->
    <string-array name="categoria">
        <item>Prato</item>
        <item>Bebida</item>
        <item>Sobremesa</item>
    </string-array>

    <!-- Estados -->
    <string-array name="estados">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
    <!--Array de Ordenação-->
    <string-array name="tipo_ordem">
        <item>Nome</item>
        <item>Menor Valor</item>
        <item>Maior Valor</item>
        <item>Nota Maior</item>
        <item>Nota Menor</item>
        <item>Mais Comentados</item>
        <item>Menos Comentados</item>
    </string-array>
    <string name="title_activity_cadastrar_produto">CadastrarProdutoActivity</string>

    <!--Cadastrar produto strings-->
    <string name="nome">Nome:</string>
    <string name="preco">Preço:</string>
    <string name="descricao_produto">Descrição:</string>
    <string name="cadastro_produto">Cadastro de Produto</string>
    <string name="categoria">Categoria:</string>
    <string name="culinaria">Culinária:</string>
    <string name="nome_produto_obrigatorio">Nome do produto é obrigatório</string>
    <string name="descricao_produto_obrigatorio">Descrição do Produto é obrigatório</string>
    <string name="preco_obrigatorio">Preço do Produto é obrigatório</string>

</resources>
